kubernetes/apps/selfhosted-apps/dify/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dify
spec:
  hostnames: ["dify.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    # /console/api
    - matches:
        - path:
            type: PathPrefix
            value: /console/api
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 5001
    # /api
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 5001
    # /v1
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 5001
    # /files
    - matches:
        - path:
            type: PathPrefix
            value: /files
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 5001
    # /mcp
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 5001
    # /explore
    - matches:
        - path:
            type: PathPrefix
            value: /explore
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 3000
    # /
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dify-app
          namespace: selfhosted-apps
          port: 3000
    # /e/
    - matches:
        - path:
            type: PathPrefix
            value: /e/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: Dify-Hook-Url
                value: http://dify.noirprime.com/e/
      backendRefs:
        - name: dify-database
          namespace: selfhosted-apps
          port: 5002
